# bubblegum_nifs

./: .gitignore  Cargo.toml  README.md  mix.exs
lib/: bubblegum_nifs.ex
lib/bubblegum_nifs/: error.ex  merkle_tree.ex  native.ex  solana_rpc.ex  utils.ex
native/bubblegum_nifs/: Cargo.toml  README.md
native/bubblegum_nifs/src/: core.rs  lib.rs  utils.rs
test/: bubblegum_nifs_test.exs
