[package]
name = "bubblegum_nifs"
version = "0.1.0"
authors = ["Sachin Beniwal <sachinbeniwal0101@gmail.com>"]
edition = "2021"

[lib]
name = "bubblegum_nifs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.0"
solana-program = "1.16"
solana-sdk = "1.16"
solana-client = "1.16"
anchor-lang = "0.28.0"
mpl-bubblegum = "1.4.0"
spl-account-compression = "0.3.0"
spl-noop = "0.1.3"
bincode = "1.3.3"
mpl-token-metadata = "4.0.0"
